fix: contrasting color for theming

--- a/src/pages/(app)/(settings)/settings/appearance/index.module.scss
+++ b/src/pages/(app)/(settings)/settings/appearance/index.module.scss
@@ -1,5 +1,5 @@
 .themeOverridesContainer {
 	display: grid;
 	gap: 8px 16px;
-	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 }
